--- a/src/App.css
+++ b/src/App.css
@@ -110,3 +110,13 @@ footer {
 .btn:hover {
   background: #5e1730;
 }
+/* Imagem do doce */
+.foto {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 14px;
+  margin-bottom: 12px;
+  border: 2px solid #f3c77b;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+}
