--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,36 @@ footer {
 .btn:hover {
   background: #5e1730;
 }
+.controle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+.controle button {
+  background: #7a1f3d;
+  color: white;
+  border: none;
+  border-radius: 50%;
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+}
+
+.controle span {
+  font-weight: bold;
+}
+
+footer {
+  position: sticky;
+  bottom: 0;
+  background: white;
+  padding: 15px;
+  border-top: 2px solid #eee;
+  text-align: center;
+}
 /* Imagem do doce */
 .foto {
   width: 100%;
